Miss depends on efl

--- a/efl/debian/control
+++ b/efl/debian/control
@@ -60,6 +60,7 @@ Build-Depends:
  libxi-dev,
  libxinerama-dev,
  libxkbcommon-x11-dev,
+ libxpresent-dev,
  libxpm-dev,
  libxrandr-dev,
  libxrender-dev,
@@ -116,6 +117,7 @@ Depends:
  libxcursor-dev,
  libxdamage-dev,
  libxext-dev,
+ libxpresent-dev,
  libxi-dev,
  libxinerama-dev,
  libxml2-dev,
